[package]
name = "trdbte"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2"
memmap2 = "0.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"

[[bench]]
name = "vs_sqlite"
harness = false
